--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,5 +1,5 @@
 <h1>Lasagna</h1>
-<img src="../images/lasagna.jpg">
+<img src="../images/lasagna.jpg" alt="A photo of a lasagna">
 
 <h1>Description:</h1>
 <p>This is a fairly popular dish due to the easiness of preparing, as you're about to find out.</p>
