Add 2 new recipes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="../odin-recipes/recipes/lasagna.html">Lasagna recipe</a>
+        <ul>
+        <li><a href="../odin-recipes/recipes/lasagna.html">Lasagna recipe</a></li>
+        <li><a href="../odin-recipes/recipes/pizza.html">Pizza recipe</a></li>
+        <li><a href="../odin-recipes/recipes/pasta.html">Pasta recipe</a></li>
+        </ul>
     </body>
 </html>
