Add basic css to index.html

--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>The Odin Project's Odin Recipes</title>
+        <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+
+        <h1 class="title">Odin Recipes</h1>
+        
+        <p class="list">
         <ul>
         <li><a href="../odin-recipes/recipes/lasagna.html">Lasagna recipe</a></li>
         <li><a href="../odin-recipes/recipes/pizza.html">Pizza recipe</a></li>
         <li><a href="../odin-recipes/recipes/pasta.html">Pasta recipe</a></li>
         </ul>
+        </p>
     </body>
 </html>
