Add css to subsites, fix return links

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,9 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <meta charset="UTF-8">
+    <title>Pasta</title>
+    <link rel="stylesheet" href="../css/styles.css">
+</head>
+
 <h1>Lasagna</h1>
 <img src="../images/lasagna.jpg" alt="A photo of a lasagna">
 
 <h1>Description:</h1>
 <p>This is a fairly popular dish due to the easiness of preparing, as you're about to find out.</p>
-<br><br><br>
+
 <h1><strong>Ingredients:</strong></h1>
 <ul>
     <li>10 ounces lasagna noodles</li>
@@ -16,9 +24,9 @@
     <li>1 (6 ounce) can tomato paste</li>
     <li>2 (6.5 ounce) cans tomato sauce</li>
 </ul>
-<br><br>
+
 <h1>Steps:</h1>
-<br><br>
+
 <ol>
     <li>Preheat oven to 375 degrees F (190 degrees C).</li>
     <li>Bring a large pot of lightly salted water to a boil. Add lasagna noodles and cook for 8 to 10 minutes or until al dente; drain.</li>
@@ -26,4 +34,5 @@
     <li>In a 9x13 inch baking pan, layer noodles, ground beef, tomato sauce mixture and cottage cheese mixture. Two layers of each will fit. Cover with tin foil and bake for 30 minutes. Remove tin foil the last 8 minutes of baking time.</li>
 </ol>
 
-<a href="index.html">Return to main page</a>
+<a href="../index.html">Return to main page</a>
+</html>
