--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -1,9 +1,17 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <meta charset="UTF-8">
+    <title>Pasta</title>
+    <link rel="stylesheet" href="../css/styles.css">
+</head>
+
 <h1>Pasta</h1>
 <img src="../images/pasta.jpg" alt="A photo of a pasta dish">
 
 <h1>Description:</h1>
 <p>This is a fairly popular dish due to the easiness of preparing, as you're about to find out.</p>
-<br><br><br>
+
 <h1><strong>Ingredients:</strong></h1>
 <ul>
     <li>8 ounces dry fettuccine pasta</li>
@@ -25,4 +33,6 @@
     <li>When the pasta is almost done, drain, and add it to the sardine sauce. Stir, cover, and turn the heat off. Let stand for a few minutes to absorb the flavors of the sauce. Squeeze juice from the lemon over the pasta. Divide onto serving plates, and top with red pepper flakes and grated Parmesan cheese.</li>
 </ol>
 
-<a href="index.html">Return to main page</a>
+<a href="../index.html">Return to main page</a>
+
+</html>
