--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -1,3 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <meta charset="UTF-8">
+    <title>Pizza</title>
+    <link rel="stylesheet" href="../css/styles.css">
+</head>
+
 <h1>Pizza</h1>
 <img src="../images/pizza.jpg" alt="A photo of a perfect pizza">
 
@@ -32,3 +40,4 @@
 </ol>
 
 <a href="index.html">Return to main page</a>
+</html>
