Fixed return for pizza

--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -39,5 +39,5 @@
     <li>Slide each pizza onto the pizza stone in the preheated oven. Bake until cheese is bubbly and the underside of the crust is golden brown, 5 to 7 minutes.</li>
 </ol>
 
-<a href="index.html">Return to main page</a>
+<a href="../index.html">Return to main page</a>
 </html>
