Change of CSS style to facilitate triple box setup

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -2,17 +2,19 @@
 <html lang="en">
     <head>
     <meta charset="UTF-8">
-    <title>Pasta</title>
+    <title>Lasagna</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-
+<div class="titlebox">
 <h1>Lasagna</h1>
 <img src="../images/lasagna.jpg" alt="A photo of a lasagna">
-
-<h1>Description:</h1>
-<p>This is a fairly popular dish due to the easiness of preparing, as you're about to find out.</p>
-
-<h1><strong>Ingredients:</strong></h1>
+</div>
+<div class="box">
+    <h2>Description:</h2>
+    <p>This is a fairly popular dish due to the easiness of preparing, as you're about to find out. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nulla enim, elementum eget tincidunt ut, luctus sed velit. Nam a sem a dolor cursus venenatis. Maecenas sit amet ultricies felis, et elementum ligula. Sed at magna quis diam bibendum fermentum.</p>   
+    </div>
+<div class="box">
+<h2>Ingredients:</h2> 
 <ul>
     <li>10 ounces lasagna noodles</li>
     <li>1,5 pounds lean ground beef</li>
@@ -24,15 +26,15 @@
     <li>1 (6 ounce) can tomato paste</li>
     <li>2 (6.5 ounce) cans tomato sauce</li>
 </ul>
-
-<h1>Steps:</h1>
-
-<ol>
-    <li>Preheat oven to 375 degrees F (190 degrees C).</li>
-    <li>Bring a large pot of lightly salted water to a boil. Add lasagna noodles and cook for 8 to 10 minutes or until al dente; drain.</li>
-    <li>In a skillet, brown ground beef. Using a fork, mix cottage cheese, eggs, garlic powder, parsley, salt and pepper. In a separate bowl combine tomato paste and tomato sauce.</li>
-    <li>In a 9x13 inch baking pan, layer noodles, ground beef, tomato sauce mixture and cottage cheese mixture. Two layers of each will fit. Cover with tin foil and bake for 30 minutes. Remove tin foil the last 8 minutes of baking time.</li>
-</ol>
-
-<a href="../index.html">Return to main page</a>
+</div>
+<div class="box">
+    <h2>Steps:</h2>
+    <ol>
+        <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+        <li>Bring a large pot of lightly salted water to a boil. Add lasagna noodles and cook for 8 to 10 minutes or until al dente; drain.</li>
+        <li>In a skillet, brown ground beef. Using a fork, mix cottage cheese, eggs, garlic powder, parsley, salt and pepper. In a separate bowl combine tomato paste and tomato sauce.</li>
+        <li>In a 9x13 inch baking pan, layer noodles, ground beef, tomato sauce mixture and cottage cheese mixture. Two layers of each will fit. Cover with tin foil and bake for 30 minutes. Remove tin foil the last 8 minutes of baking time.</li>
+    </ol>
+</div>
+<a class="return" href="../index.html">Return to main page</a>
 </html>
