--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -5,14 +5,16 @@
     <title>Pasta</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-
+<div class="titlebox">
 <h1>Pasta</h1>
-<img src="../images/pasta.jpg" alt="A photo of a pasta dish">
-
-<h1>Description:</h1>
-<p>This is a fairly popular dish due to the easiness of preparing, as you're about to find out.</p>
-
-<h1><strong>Ingredients:</strong></h1>
+<img src="../images/pasta.jpg" alt="A photo of pasta dish">
+</div>
+<div class="box">
+    <h2>Description:</h2>
+    <p>This is a fairly popular dish due to the easiness of preparing, as you're about to find out. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nulla enim, elementum eget tincidunt ut, luctus sed velit. Nam a sem a dolor cursus venenatis. Maecenas sit amet ultricies felis, et elementum ligula. Sed at magna quis diam bibendum fermentum.</p>   
+    </div>
+<div class="box">
+<h2>Ingredients:</h2> 
 <ul>
     <li>8 ounces dry fettuccine pasta</li>
     <li>2 tablespoons olive oil</li>
@@ -22,17 +24,15 @@
     <li>1 (3.75 ounce) can sardines in tomato sauce</li>
     <li>1 pinch red pepper flakes, or to taste/li>
     <li>1/4 cup freshly grated Parmesan cheese</li>
-    
 </ul>
-<br><br>
-<h1>Steps:</h1>
-<br><br>
-<ol>
-    <li>Bring a large pot of lightly salted water to a boil. Add pasta, and cook for about 8 minutes, or until almost tender.</li>
-    <li>While the pasta is cooking, heat olive oil in a skillet over medium heat. Add the onion, and cook for a few minutes until soft, then add the garlic, and cook until fragrant. Stir in the sardines with their sauce. When the sardines heat through, reduce heat to low, and simmer until the pasta is ready.</li>
-    <li>When the pasta is almost done, drain, and add it to the sardine sauce. Stir, cover, and turn the heat off. Let stand for a few minutes to absorb the flavors of the sauce. Squeeze juice from the lemon over the pasta. Divide onto serving plates, and top with red pepper flakes and grated Parmesan cheese.</li>
-</ol>
-
-<a href="../index.html">Return to main page</a>
-
+</div>
+<div class="box">
+    <h2>Steps:</h2>
+    <ol>
+        <li>Bring a large pot of lightly salted water to a boil. Add pasta, and cook for about 8 minutes, or until almost tender.</li>
+        <li>While the pasta is cooking, heat olive oil in a skillet over medium heat. Add the onion, and cook for a few minutes until soft, then add the garlic, and cook until fragrant. Stir in the sardines with their sauce. When the sardines heat through, reduce heat to low, and simmer until the pasta is ready.</li>
+        <li>When the pasta is almost done, drain, and add it to the sardine sauce. Stir, cover, and turn the heat off. Let stand for a few minutes to absorb the flavors of the sauce. Squeeze juice from the lemon over the pasta. Divide onto serving plates, and top with red pepper flakes and grated Parmesan cheese.</li>
+    </ol>
+</div>
+<a class="return" href="../index.html">Return to main page</a>
 </html>
