--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,39 +5,41 @@
     <title>Pizza</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-
+<div class="titlebox">
 <h1>Pizza</h1>
 <img src="../images/pizza.jpg" alt="A photo of a perfect pizza">
-
-<h1>Description:</h1>
-<p>This dish is a bit more complicated in terms of preparing, though it's well worth it!</p>
-<br><br><br>
-<h1><strong>Ingredients:</strong></h1>
+</div>
+<div class="box">
+    <h2>Description:</h2>
+    <p>This dish is a bit more complicated in terms of preparing, though it's well worth it! Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse nulla enim, elementum eget tincidunt ut, luctus sed velit. Nam a sem a dolor cursus venenatis. Maecenas sit amet ultricies felis, et elementum ligula. Sed at magna quis diam bibendum fermentum.</p>   
+    </div>
+<div class="box">
+<h2>Ingredients:</h2> 
 <ul>
-    <li>3,5 cups all-purpose flour</li>
-    <li>1 teaspoon salt</li>
-    <li>1 cup water</li>
-    <li>1 (.25 ounce) package active dry yeast</li>
-    <li>1 pinch white sugar</li>
-    <li>1/4 cup flour for dusting</li>
-    <li>2 cups pizza sauce</li>
-    <li>20 slices fresh mozzarella cheese</li>
-    <li>20 leaves fresh basil</li>
-    <li>olive oil</li>
-    <li>sea salt to taste</li>
+<li>3,5 cups all-purpose flour</li>
+<li>1 teaspoon salt</li>
+<li>1 cup water</li>
+<li>1 (.25 ounce) package active dry yeast</li>
+<li>1 pinch white sugar</li>
+<li>1/4 cup flour for dusting</li>
+<li>2 cups pizza sauce</li>
+<li>20 slices fresh mozzarella cheese</li>
+<li>20 leaves fresh basil</li>
+<li>olive oil</li>
+<li>sea salt to taste</li>
 </ul>
-<br><br>
-<h1>Steps:</h1>
-<br><br>
-<ol>
-    <li>Stir flour and 1 teaspoon salt in a bowl. Set aside.</li>
-    <li>Mix water, yeast, and sugar in a large bowl. Let stand until yeast begins to form a creamy foam, about 5 minutes.</li>
-    <li>Stir half the flour mixture into yeast mixture until no dry spots remain. Stir in remaining flour, 1/2 cup at a time, mixing well after each addition. When dough pulls together, turn it out onto a lightly floured surface and knead until smooth and elastic, about 8 minutes.</li>
-    <li>Lightly oil a large bowl, then place dough in the bowl and turn to coat with oil. Cover with a light cloth and let rise in a warm place (80 to 95 degrees F (27 to 35 degrees C)) until doubled in volume, about 1 hour. Punch dough down, divide into 4 equal pieces, and form each into a ball.</li>
-    <li>Preheat oven with a pizza stone to 500 degrees F (260 degrees C).</li>
-    <li>Stretch out and pat 1 dough ball to form a circle 10 to 12 inches in diameter. Place dough on a lightly floured pizza peel. Top with 1/2 cup of tomato sauce and spread to cover within an inch of the edge of the dough. Arrange 5 slices of mozzarella cheese on top of the tomato sauce, then place 5 basil leaves on top. Drizzle pizza with 1 tablespoon olive oil and sprinkle with sea salt to taste. Repeat for 3 remaining dough balls.</li>
-    <li>Slide each pizza onto the pizza stone in the preheated oven. Bake until cheese is bubbly and the underside of the crust is golden brown, 5 to 7 minutes.</li>
-</ol>
-
-<a href="../index.html">Return to main page</a>
+</div>
+<div class="box">
+    <h2>Steps:</h2>
+    <ol>
+        <li>Stir flour and 1 teaspoon salt in a bowl. Set aside.</li>
+        <li>Mix water, yeast, and sugar in a large bowl. Let stand until yeast begins to form a creamy foam, about 5 minutes.</li>
+        <li>Stir half the flour mixture into yeast mixture until no dry spots remain. Stir in remaining flour, 1/2 cup at a time, mixing well after each addition. When dough pulls together, turn it out onto a lightly floured surface and knead until smooth and elastic, about 8 minutes.</li>
+        <li>Lightly oil a large bowl, then place dough in the bowl and turn to coat with oil. Cover with a light cloth and let rise in a warm place (80 to 95 degrees F (27 to 35 degrees C)) until doubled in volume, about 1 hour. Punch dough down, divide into 4 equal pieces, and form each into a ball.</li>
+        <li>Preheat oven with a pizza stone to 500 degrees F (260 degrees C).</li>
+        <li>Stretch out and pat 1 dough ball to form a circle 10 to 12 inches in diameter. Place dough on a lightly floured pizza peel. Top with 1/2 cup of tomato sauce and spread to cover within an inch of the edge of the dough. Arrange 5 slices of mozzarella cheese on top of the tomato sauce, then place 5 basil leaves on top. Drizzle pizza with 1 tablespoon olive oil and sprinkle with sea salt to taste. Repeat for 3 remaining dough balls.</li>
+        <li>Slide each pizza onto the pizza stone in the preheated oven. Bake until cheese is bubbly and the underside of the crust is golden brown, 5 to 7 minutes.</li>
+    </ol>
+</div>
+<a class="return" href="../index.html">Return to main page</a>
 </html>
