Add a bar with images to navigate

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
         <h1 class="title">Odin Recipes</h1>
         
         <p class="list">
-        <ul>
-        <li><a href="../odin-recipes/recipes/lasagna.html">Lasagna recipe</a></li>
-        <li><a href="../odin-recipes/recipes/pizza.html">Pizza recipe</a></li>
-        <li><a href="../odin-recipes/recipes/pasta.html">Pasta recipe</a></li>
+        <ul class="a">
+        <li><a href="../odin-recipes/recipes/lasagna.html"><img src="../odin-recipes/images/lasagna-button.jpg" alt="Pasta"></a></a></li>
+        <li><a href="../odin-recipes/recipes/pizza.html"><img src="../odin-recipes//images/pizza-button.jpg" alt="Pasta"></a></a></li>
+        <li><a href="../odin-recipes/recipes/pasta.html"><img src="../odin-recipes//images/pasta-button.jpg" alt="Pasta"></a></li>
         </ul>
         </p>
     </body>
 </html>
+
