--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -5,6 +5,11 @@
     <title>Pasta</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
+<div>
+    <a href="../index.html"><img src="../images/home.jpg" alt="Home"></a>
+    <a href="pizza.html"><img src="../images/pizza-button.jpg" alt="Pizza"></a>
+    <a href="lasagna.html"><img src="../images/lasagna-button.jpg" alt="Lasagna"></a>
+</div>
 <div class="titlebox">
 <h1>Pasta</h1>
 <img src="../images/pasta.jpg" alt="A photo of pasta dish">
