--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,9 +5,14 @@
     <title>Pizza</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
+<div>
+    <a href="../index.html"><img src="../images/home.jpg" alt="Home"></a>
+    <a href="pasta.html"><img src="../images/pasta-button.jpg" alt="Pasta"></a>
+    <a href="lasagna.html"><img src="../images/lasagna-button.jpg" alt="Lasagna"></a>
+</div>
 <div class="titlebox">
 <h1>Pizza</h1>
-<img src="../images/pizza.jpg" alt="A photo of a perfect pizza">
+<img src="../images/pizza.jpg" alt="A photo of a perfect pizza" class="img">
 </div>
 <div class="box">
     <h2>Description:</h2>
