--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,6 +5,11 @@
     <title>Lasagna</title>
     <link rel="stylesheet" href="../css/styles.css">
 </head>
+<div>
+    <a href="../index.html"><img src="../images/home.jpg" alt="Home"></a>
+    <a href="pasta.html"><img src="../images/pasta-button.jpg" alt="Pasta"></a>
+    <a href="pizza.html"><img src="../images/pizza-button.jpg" alt="Pizza"></a>
+</div>
 <div class="titlebox">
 <h1>Lasagna</h1>
 <img src="../images/lasagna.jpg" alt="A photo of a lasagna">
