Added class to images for lasagna and pasta

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,7 +12,7 @@
 </div>
 <div class="titlebox">
 <h1>Lasagna</h1>
-<img src="../images/lasagna.jpg" alt="A photo of a lasagna">
+<img src="../images/lasagna.jpg" alt="A photo of a lasagna" class="img">
 </div>
 <div class="box">
     <h2>Description:</h2>
