--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -12,7 +12,7 @@
 </div>
 <div class="titlebox">
 <h1>Pasta</h1>
-<img src="../images/pasta.jpg" alt="A photo of pasta dish">
+<img src="../images/pasta.jpg" alt="A photo of pasta dish" class="img">
 </div>
 <div class="box">
     <h2>Description:</h2>
